--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,7 +13,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-music fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">All The Hits</h4>
+                    <h4 class="service-heading">Professional Musicianship</h4>
                     <p class="text-muted">We have a huge backlog of cover songs we play and we can tailor our set to match your event vibes perfectly.</p>
                 </div>
                 <div class="col-md-4">
@@ -29,7 +29,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-birthday-cake fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">We'll Rock up Any Event</h4>
+                    <h4 class="service-heading">We'll Rock Any Event</h4>
                     <p class="text-muted">Weddings, parties, bars, wineries, breweries, bar mitzvahs, you name it, we'll play it</p>
                 </div>
             </div>
