Added portraits, stripped layout down to basics

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,10 +22,7 @@
                         <a class="page-scroll" href="#services">What We Do</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">The Band</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#band">The Band</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
