--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,11 +3,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="viewport" content="width=device-width">
-    <meta property="og:title" content="{{ site.title }}">
+    <meta property="og:title" content="{{ site.site_title }}">
     <meta property="og:description" content="{{ site.description }}">
     <meta property="og:image" content="/{{ site.image }}">
     <meta property="og:url" content="{{ site.url }}">
-    <meta name="twitter:title" content="European Travel Destinations ">
+    <meta name="twitter:title" content="{{ site.site_title }}">
     <meta name="twitter:description" content="{{ site.description }}">
     <meta name="twitter:image" content="/{{ site.thumbnail }}">
     <meta name="twitter:card" content="/{{ site.image }}">
